testsuite/tests/default/DefaultImportFail04.stderr
[1 of 4] Compiling ExportShowSum    ( ExportShowSum.hs, ExportShowSum.o )
[2 of 4] Compiling ReExportShowSumModule ( ReExportShowSumModule.hs, ReExportShowSumModule.o )
[3 of 4] Compiling Main             ( DefaultImportFail04.hs, DefaultImportFail04.o )

DefaultImportFail04.hs:6:8: error: [GHC-39999]
    • Ambiguous type variable ‘a0’ arising from a use of ‘print’
      prevents the constraint ‘(Show a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Show Ordering -- Defined in ‘GHC.Internal.Show’
        instance Show Integer -- Defined in ‘GHC.Internal.Show’
        ...plus 25 others
        ...plus 19 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the expression: print mempty
      In an equation for ‘main’: main = print mempty

DefaultImportFail04.hs:6:14: error: [GHC-39999]
    • Ambiguous type variable ‘a0’ arising from a use of ‘mempty’
      prevents the constraint ‘(Monoid a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Monoid a => Monoid (IO a)
          -- Defined in ‘GHC.Internal.Base’
        instance Monoid Ordering -- Defined in ‘GHC.Internal.Base’
        ...plus 9 others
        ...plus 7 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the first argument of ‘print’, namely ‘mempty’
      In the expression: print mempty
      In an equation for ‘main’: main = print mempty
